Se agrego un CSS general que afecta todo el HTML, ademas de esto, se mejoro el diseño de la seccion 'Service' para que se vea mucho mas elegante.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/services.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/section.css" />
+    <link rel="stylesheet" href="css/general.css" />
     <script src="js/videos.js"></script>
     <script src="js/time-video.js"></script>
     <title>Innovative Football Management</title>
@@ -39,7 +40,10 @@
         <video id="video4" src="archivos/futbol4.mp4" muted></video>
       </div>
       <div class="contain-img">
-        <img src="archivos/IFM_Football_Mgmt_Logo_Final.png" alt="Logo Principal" />
+        <img
+          src="archivos/IFM_Football_Mgmt_Logo_Final.png"
+          alt="Logo Principal"
+        />
       </div>
     </header>
     <section>
@@ -65,110 +69,97 @@
 
     <article>
       <div class="contain">
-        <div class="box-desing">
-          <div class="box-icon">
-            <img src="archivos/scouting.png" alt="Icon" />
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="" alt="icon" />
+            <h1>Title Example</h1>
           </div>
-          <div class="box-text">
-            <h1>Servicio #1</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
-              veritatis facilis obcaecati fugit doloremque saepe provident,
-              magni libero id dolorem qui odio iure inventore minus distinctio
-              in! Labore, deserunt consectetur.
-            </p>
-          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
         </div>
-        <div class="box-desing">
-          <div class="box-icon">
-            <img src="archivos/search_business.png" alt="Icon" />
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="" alt="icon" />
+            <h1>Title Example</h1>
           </div>
-          <div class="box-text">
-            <h1>Servicio #2</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
-              veritatis facilis obcaecati fugit doloremque saepe provident,
-              magni libero id dolorem qui odio iure inventore minus distinctio
-              in! Labore, deserunt consectetur.
-            </p>
-          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
         </div>
-        <div class="box-desing">
-          <div class="box-icon">
-            <img src="archivos/player.png" alt="Icon" />
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="" alt="icon" />
+            <h1>Title Example</h1>
           </div>
-          <div class="box-text">
-            <h1>Servicio #3</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
-              veritatis facilis obcaecati fugit doloremque saepe provident,
-              magni libero id dolorem qui odio iure inventore minus distinctio
-              in! Labore, deserunt consectetur.
-            </p>
-          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
         </div>
       </div>
       <div class="contain">
-        <div class="box-desing">
-          <div class="box-icon">
-            <img src="archivos/asistance_legal.png" alt="Icon" />
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="" alt="icon" />
+            <h1>Title Example</h1>
           </div>
-          <div class="box-text">
-            <h1>Servicio #4</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
-              veritatis facilis obcaecati fugit doloremque saepe provident,
-              magni libero id dolorem qui odio iure inventore minus distinctio
-              in! Labore, deserunt consectetur.
-            </p>
-          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
         </div>
-        <div class="box-desing">
-          <div class="box-icon">
-            <img src="archivos/marketing.png" alt="Icon" />
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="" alt="icon" />
+            <h1>Title Example</h1>
           </div>
-          <div class="box-text">
-            <h1>Servicio #5</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
-              veritatis facilis obcaecati fugit doloremque saepe provident,
-              magni libero id dolorem qui odio iure inventore minus distinctio
-              in! Labore, deserunt consectetur.
-            </p>
-          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
         </div>
-        <div class="box-desing">
-          <div class="box-icon">
-            <img src="archivos/help_24-7.png" alt="Icon" />
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="" alt="icon" />
+            <h1>Title Example</h1>
           </div>
-          <div class="box-text">
-            <h1>Servicio #6</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
-              veritatis facilis obcaecati fugit doloremque saepe provident,
-              magni libero id dolorem qui odio iure inventore minus distinctio
-              in! Labore, deserunt consectetur.
-            </p>
-          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
         </div>
       </div>
       <div class="contain">
-        <div id="box-desing-7">
-          <div class="box-icon">
-            <img src="archivos/club.png" alt="Icon" />
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="" alt="icon" />
+            <h1>Title Example</h1>
           </div>
-          <div class="box-text">
-            <h1>Servicio #7</h1>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
-              veritatis facilis obcaecati fugit doloremque saepe provident,
-              magni libero id dolorem qui odio iure inventore minus distinctio
-              in! Labore, deserunt consectetur.
-            </p>
-          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
         </div>
       </div>
     </article>
+
     <footer>
       <div class="contain">
         <p>Innovative Football Management</p>
@@ -194,4 +185,4 @@
   </body>
 </html>
 
-<!-- Version 2.1.2 -->
+<!-- Version 2.2.5 -->
