--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/section.css" />
     <link rel="stylesheet" href="css/general.css" />
+    <link rel="icon" href="archivos/favicon.ico" />
     <script src="js/videos.js"></script>
     <script src="js/time-video.js"></script>
     <title>Innovative Football Management</title>
   </head>
   <body>
     <nav>
-      <div id="contain-1"><img src="archivos/imagenHTML.png" alt="logo" /></div>
+      <div id="contain-1">
+        <img src="archivos/escudo.png" alt="logo" id="logonormal" />
+        <img src="archivos/IFM_Nombre.png" alt="logo-nombre" id="logonombre" />
+      </div>
       <div id="contain-2">
         <div class="botones"><a href="#">Inicio</a></div>
         <div class="botones"><a href="#">Nosotros</a></div>
@@ -28,51 +32,81 @@
     </nav>
     <header>
       <div class="contain">
-        <video id="video1" src="archivos/futbol1.mp4" muted></video>
+        <video id="video1" src="borrar/gol1.mp4" muted></video>
       </div>
       <div class="contain">
-        <video id="video2" src="archivos/futbol2.mp4" muted></video>
+        <video id="video2" src="borrar/gol2.mp4" muted></video>
       </div>
       <div class="contain">
-        <video id="video3" src="archivos/futbol3.mp4" muted></video>
+        <video id="video3" src="borrar/gol3.mp4" muted></video>
       </div>
       <div class="contain">
-        <video id="video4" src="archivos/futbol4.mp4" muted></video>
+        <video id="video4" src="borrar/gol4.mp4" muted></video>
       </div>
       <div class="contain-img">
-        <img
-          src="archivos/IFM_Football_Mgmt_Logo_Final.png"
-          alt="Logo Principal"
-        />
+        <img src="archivos/IFM_NoStars.png" alt="Logo Principal" />
       </div>
     </header>
-    <section>
-      <div class="container">
-        <p class="marquee">Enterprise #1</p>
-        <p class="marquee">Enterprise #2</p>
-        <p class="marquee">Enterprise #3</p>
-        <p class="marquee">Enterprise #4</p>
-      </div>
-    </section>
+
     <main>
       <div id="contain-1">
-        <h1>Title</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe,
-          provident laboriosam est sed deserunt voluptate vitae temporibus vel
-          mollitia? Dicta porro nemo veniam consequuntur eos asperiores quam
-          fugiat quod aliquam!
-        </p>
+        <div class="contain-text">
+          <h1>NOSOTROS</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe,
+            provident laboriosam est sed deserunt voluptate vitae temporibus vel
+            mollitia? Dicta porro nemo veniam consequuntur eos asperiores quam
+            fugiat quod aliquam!
+          </p>
+        </div>
+        <div class="contain-box">
+          <div class="mini-contain-box">
+            <h1>Objetivo</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+              a repellat porro pariatur nesciunt maiores quis veritatis
+              repellendus velit. Porro, recusandae odio! Totam iure asperiores
+              expedita magni doloremque quisquam nisi!
+            </p>
+          </div>
+          <div class="mini-contain-box">
+            <h1>Valores</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+              iure quaerat inventore aperiam nulla sed itaque similique
+              laboriosam culpa nam quis non, soluta totam distinctio iste
+              possimus rem temporibus eaque.
+            </p>
+          </div>
+          <div class="mini-contain-box">
+            <h2>Quienes Somos</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+              iure quaerat inventore aperiam nulla sed itaque similique
+              laboriosam culpa nam quis non, soluta totam distinctio iste
+              possimus rem temporibus eaque.
+            </p>
+          </div>
+        </div>
       </div>
-      <div id="contain-2"><img src="archivos/balon1.jpg" alt="image" /></div>
+      <div id="contain-2"><img src="archivos/balon2.jpg" alt="image" /></div>
     </main>
+
+    <section>
+      <div class="container">
+        <img src="archivos/Real_Madrid.png" alt="image" />
+        <img src="archivos/FC_Barcelona.png" alt="image" />
+        <img src="archivos/Manchester_City_FC_badge.png" alt="image" />
+        <img src="archivos/Paris_Saint-Germain.png" alt="image" />
+      </div>
+    </section>
 
     <article>
       <div class="contain">
         <div class="info-contain">
           <div class="icon-title">
-            <img src="" alt="icon" />
-            <h1>Title Example</h1>
+            <img src="archivos/club.svg" alt="icon" />
+            <h1>Asesoría a Clubes</h1>
           </div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
@@ -83,8 +117,8 @@
         </div>
         <div class="info-contain">
           <div class="icon-title">
-            <img src="" alt="icon" />
-            <h1>Title Example</h1>
+            <img src="archivos/player.svg" alt="icon" />
+            <h1>Promoción de Jugador</h1>
           </div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
@@ -95,46 +129,8 @@
         </div>
         <div class="info-contain">
           <div class="icon-title">
-            <img src="" alt="icon" />
-            <h1>Title Example</h1>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
-        </div>
-      </div>
-      <div class="contain">
-        <div class="info-contain">
-          <div class="icon-title">
-            <img src="" alt="icon" />
-            <h1>Title Example</h1>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
-        </div>
-        <div class="info-contain">
-          <div class="icon-title">
-            <img src="" alt="icon" />
-            <h1>Title Example</h1>
-          </div>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
-            reprehenderit pariatur, deserunt similique illum facilis, modi hic
-            eveniet doloremque, ratione quibusdam quia corrupti facere
-            consectetur obcaecati possimus. Id, minima molestias.
-          </p>
-        </div>
-        <div class="info-contain">
-          <div class="icon-title">
-            <img src="" alt="icon" />
-            <h1>Title Example</h1>
+            <img src="archivos/help_24-7.svg" alt="icon" />
+            <h1>Apoyo 24/7</h1>
           </div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
@@ -147,8 +143,46 @@
       <div class="contain">
         <div class="info-contain">
           <div class="icon-title">
-            <img src="" alt="icon" />
-            <h1>Title Example</h1>
+            <img src="archivos/marketing.svg" alt="icon" />
+            <h1>Marketing Deportivo</h1>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
+        </div>
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="archivos/scouting.svg" alt="icon" />
+            <h1>Scouting</h1>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
+        </div>
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="archivos/asistance_legal.svg" alt="icon" />
+            <h1>Asistencia Legal</h1>
+          </div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
+            reprehenderit pariatur, deserunt similique illum facilis, modi hic
+            eveniet doloremque, ratione quibusdam quia corrupti facere
+            consectetur obcaecati possimus. Id, minima molestias.
+          </p>
+        </div>
+      </div>
+      <div class="contain">
+        <div class="info-contain">
+          <div class="icon-title">
+            <img src="archivos/search_business.svg" alt="icon" />
+            <h1>Busqueda y Negociacion</h1>
           </div>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi
@@ -185,4 +219,4 @@
   </body>
 </html>
 
-<!-- Version 2.2.5 -->
+<!-- Version 3.0.0 -->
