--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/section.css" />
     <link rel="stylesheet" href="css/general.css" />
-    <link rel="icon" href="archivos/favicon.ico" />
+    <link rel="icon" href="archivos/logos_e_iconos/favicon.ico" />
     <script src="js/videos.js"></script>
     <script src="js/time-video.js"></script>
     <title>Innovative Football Management</title>
@@ -19,8 +19,16 @@
   <body>
     <nav>
       <div id="contain-1">
-        <img src="archivos/escudo.png" alt="logo" id="logonormal" />
-        <img src="archivos/IFM_Nombre.png" alt="logo-nombre" id="logonombre" />
+        <img
+          src="archivos/logos_e_iconos/escudo.png"
+          alt="logo"
+          id="logonormal"
+        />
+        <img
+          src="archivos/logos_e_iconos/IFM_Nombre.png"
+          alt="logo-nombre"
+          id="logonombre"
+        />
       </div>
       <div id="contain-2">
         <div class="botones"><a href="#">Inicio</a></div>
@@ -32,19 +40,22 @@
     </nav>
     <header>
       <div class="contain">
-        <video id="video1" src="borrar/gol1.mp4" muted></video>
+        <video id="video1" src="archivos/videos/gol1.mp4" muted></video>
       </div>
       <div class="contain">
-        <video id="video2" src="borrar/gol2.mp4" muted></video>
+        <video id="video2" src="archivos/videos/gol2.mp4" muted></video>
       </div>
       <div class="contain">
-        <video id="video3" src="borrar/gol3.mp4" muted></video>
+        <video id="video3" src="archivos/videos/gol3.mp4" muted></video>
       </div>
       <div class="contain">
-        <video id="video4" src="borrar/gol4.mp4" muted></video>
+        <video id="video4" src="archivos/videos/gol4.mp4" muted></video>
       </div>
       <div class="contain-img">
-        <img src="archivos/IFM_NoStars.png" alt="Logo Principal" />
+        <img
+          src="archivos/logos_e_iconos/IFM_NoStars.png"
+          alt="Logo Principal"
+        />
       </div>
     </header>
 
@@ -89,15 +100,17 @@
           </div>
         </div>
       </div>
-      <div id="contain-2"><img src="archivos/balon2.jpg" alt="image" /></div>
+      <div id="contain-2">
+        <img src="archivos/imagenes/balon2.jpg" alt="image" />
+      </div>
     </main>
 
     <section>
       <div class="container">
-        <img src="archivos/Real_Madrid.png" alt="image" />
-        <img src="archivos/FC_Barcelona.png" alt="image" />
-        <img src="archivos/Manchester_City_FC_badge.png" alt="image" />
-        <img src="archivos/Paris_Saint-Germain.png" alt="image" />
+        <img src="archivos/imagenes/Real_Madrid.png" alt="image" />
+        <img src="archivos/imagenes/FC_Barcelona.png" alt="image" />
+        <img src="archivos/imagenes/Manchester_City_FC_badge.png" alt="image" />
+        <img src="archivos/imagenes/Paris_Saint-Germain.png" alt="image" />
       </div>
     </section>
 
@@ -105,7 +118,7 @@
       <div class="contain">
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/club.svg" alt="icon" />
+            <img src="archivos/svg/club.svg" alt="icon" />
             <h1>Asesoría a Clubes</h1>
           </div>
           <p>
@@ -117,7 +130,7 @@
         </div>
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/player.svg" alt="icon" />
+            <img src="archivos/svg/player.svg" alt="icon" />
             <h1>Promoción de Jugador</h1>
           </div>
           <p>
@@ -129,7 +142,7 @@
         </div>
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/help_24-7.svg" alt="icon" />
+            <img src="archivos/svg/help_24-7.svg" alt="icon" />
             <h1>Apoyo 24/7</h1>
           </div>
           <p>
@@ -143,7 +156,7 @@
       <div class="contain">
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/marketing.svg" alt="icon" />
+            <img src="archivos/svg/marketing.svg" alt="icon" />
             <h1>Marketing Deportivo</h1>
           </div>
           <p>
@@ -155,7 +168,7 @@
         </div>
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/scouting.svg" alt="icon" />
+            <img src="archivos/svg/scouting.svg" alt="icon" />
             <h1>Scouting</h1>
           </div>
           <p>
@@ -167,7 +180,7 @@
         </div>
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/asistance_legal.svg" alt="icon" />
+            <img src="archivos/svg/asistance_legal.svg" alt="icon" />
             <h1>Asistencia Legal</h1>
           </div>
           <p>
@@ -181,7 +194,7 @@
       <div class="contain">
         <div class="info-contain">
           <div class="icon-title">
-            <img src="archivos/search_business.svg" alt="icon" />
+            <img src="archivos/svg/search_business.svg" alt="icon" />
             <h1>Busqueda y Negociacion</h1>
           </div>
           <p>
@@ -206,13 +219,13 @@
       </div>
       <div id="redes">
         <a href="instagram.com"
-          ><img src="archivos/instagram.png" alt="Instagram"
+          ><img src="archivos/logos_e_iconos/instagram.png" alt="Instagram"
         /></a>
         <a href="facebook.com"
-          ><img src="archivos/facebook.png" alt="Facebook"
+          ><img src="archivos/logos_e_iconos/facebook.png" alt="Facebook"
         /></a>
         <a href="whatsapp.com"
-          ><img src="archivos/whatsapp.png" alt="Whatsapp"
+          ><img src="archivos/logos_e_iconos/whatsapp.png" alt="Whatsapp"
         /></a>
       </div>
     </footer>
