Botones de Neon con animacion temporales

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/index/normalize.css" />
     <link rel="stylesheet" href="css/index/main.css" />
-    <link rel="stylesheet" href="css/index/general.css">
+    <link rel="stylesheet" href="css/index/general.css" />
     <title>Innovative</title>
   </head>
   <body>
@@ -17,9 +17,27 @@
       <div class="logo-contain">
         <img src="archivos/logos_e_iconos/ifmlogoia.png" alt="imagen-logo" />
         <div class="buttoms">
-          <a href="IFM.html">Descubre IFM</a>
-          <a href="">Explora Innov8</a>
-          <a href="">Conoce C.D. Olimpia</a>
+          <a href="IFM.html">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Descubre IFM</a
+          >
+          <a href="">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Explora Innov8</a
+          >
+          <a href="">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Conoce C.D. Olimpia</a
+          >
         </div>
       </div>
     </main>
