En el apartado de IFM se quitaron los botones ya se haran parte del index, ademas de esto en el index se anexaron unas imagenes temporales

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main>
       <div class="image-contain">
-        <img src="archivos/imagenes/instagram1.jpeg" alt="imagen1" />
+        <img src="archivos/imagenes/instagram1.jpg" alt="imagen1" />
         <img src="archivos/imagenes/instagram2.jpg" alt="imagen2" />
       </div>
       <div class="logo-contain">
